--- a/Contact.html
+++ b/Contact.html
@@ -121,7 +121,7 @@
 	C6.751,11.72,6.031,23.763,11.459,31L26,52l14.541-21C45.969,23.763,45.249,11.72,38.853,5.324z M26.177,24c-3.314,0-6-2.686-6-6
 	s2.686-6,6-6s6,2.686,6,6S29.491,24,26.177,24z"></path></svg></span>
               <h5 class="u-text u-text-3"> ADDRESS:</h5>
-              <p class="u-text u-text-4"> R2W2+XQG, Aturugiriya Rd, Homagama</p>
+              <p class="u-text u-text-4"> Aturugiriya Rd, Homagama</p>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-color-4 u-list-item u-radius-50 u-repeater-item u-shape-round u-list-item-3">
