--- a/News.html
+++ b/News.html
@@ -117,7 +117,7 @@
                 <h3 class="u-align-center u-blog-control u-custom-font u-font-playfair-display u-text u-text-default u-text-2">
                   <a class="u-post-header-link" href="blog/school-parahara-news.html"><!--blog_post_header_content-->School Parahara News<!--/blog_post_header_content--></a>
                 </h3><!--/blog_post_header--><!--blog_post_content-->
-                <div class="u-align-center u-blog-control u-post-content u-text u-text-3"><!--blog_post_content_content-->Sample small text. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                <div class="u-align-center u-blog-control u-post-content u-text u-text-3"><!--blog_post_content_content--><!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/school-parahara-news.html" class="u-blog-control u-border-2 u-border-black u-btn u-btn-round u-button-style u-hover-black u-none u-radius-50 u-text-black u-text-hover-white u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="2750" data-animation-delay="1000"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"","defaultValue":"Read More"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
@@ -136,7 +136,7 @@
                 <h3 class="u-align-center u-blog-control u-custom-font u-font-playfair-display u-text u-text-default u-text-4">
                   <a class="u-post-header-link" href="blog/school-englsish-day.html"><!--blog_post_header_content-->School Englsish Day <!--/blog_post_header_content--></a>
                 </h3><!--/blog_post_header--><!--blog_post_content-->
-                <div class="u-align-center u-blog-control u-post-content u-text u-text-5"><!--blog_post_content_content-->Sample small text. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                <div class="u-align-center u-blog-control u-post-content u-text u-text-5"><!--blog_post_content_content--><!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/school-englsish-day.html" class="u-blog-control u-border-2 u-border-black u-btn u-btn-round u-button-style u-hover-black u-none u-radius-50 u-text-black u-text-hover-white u-btn-2" data-animation-name="customAnimationIn" data-animation-duration="2750" data-animation-delay="1000"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"","defaultValue":"Read More"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post--><!--blog_post-->
@@ -155,7 +155,7 @@
                 <h3 class="u-align-center u-blog-control u-custom-font u-font-playfair-display u-text u-text-default u-text-6">
                   <a class="u-post-header-link" href="blog/school-prefect-camp.html"><!--blog_post_header_content-->School Prefect Camp <!--/blog_post_header_content--></a>
                 </h3><!--/blog_post_header--><!--blog_post_content-->
-                <div class="u-align-center u-blog-control u-post-content u-text u-text-7"><!--blog_post_content_content-->Sample small text. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
+                <div class="u-align-center u-blog-control u-post-content u-text u-text-7"><!--blog_post_content_content--><!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
                 <a href="blog/school-prefect-camp.html" class="u-blog-control u-border-2 u-border-black u-btn u-btn-round u-button-style u-hover-black u-none u-radius-50 u-text-black u-text-hover-white u-btn-3" data-animation-name="customAnimationIn" data-animation-duration="2750" data-animation-delay="1000"><!--blog_post_readmore_content--><!--options_json--><!--{"content":"","defaultValue":"Read More"}--><!--/options_json-->Read More<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
               </div>
             </div><!--/blog_post-->
