--- a/About.html
+++ b/About.html
@@ -111,7 +111,7 @@
                     <span class="u-text-body-alt-color" style="font-size: 3rem;">About School</span>
                     <br>
                   </h2>
-                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Paragraph. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id suscipit ex. Suspendisse rhoncus laoreet purus quis elementum. Phasellus sed efficitur dolor, et ultricies sapien. Quisque fringilla sit amet dolor commodo efficitur. Aliquam et sem odio. In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.</p>
+                  <p class="u-align-center u-text u-text-body-alt-color u-text-2">Under Construction.</p>
                 </div>
               </div>
             </div>
@@ -137,7 +137,7 @@
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-1">
             <div class="u-container-layout u-similar-container u-container-layout-1">
               <div class="u-image u-image-circle u-image-1" data-image-width="259" data-image-height="194"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-1"> vice principal</h3>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-1"> Vice Principal</h3>
               <p class="u-text u-text-palette-3-base u-text-2"> ජ්‍යෙෂ්ඨ නියෝජ්‍ය විදුහල්පති&nbsp;<br>&nbsp;(අධ්‍යාපන පරිපාලන)
               </p>
               <p class="u-text u-text-3"> එම්.කේ.එන්.කේ. ද සිල්වා මිය</p>
@@ -146,41 +146,43 @@
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-2">
             <div class="u-container-layout u-similar-container u-container-layout-2">
               <div class="u-image u-image-circle u-image-2" data-image-width="1040" data-image-height="480"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-4"> vice principal</h3>
-              <p class="u-text u-text-palette-3-base u-text-5">sales manager</p>
-              <p class="u-text u-text-6">Glavi amet ritnisl libero molestie ante ut fringilla purus eros quis glavrid from dolor amet iquam lorem bibendum</p>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-4"> Vice Principal</h3>
+              <p class="u-text u-text-palette-3-base u-text-5">නියෝජ්‍ය විදුහල්පති <br>(ප්‍රාථමික අංශ භාර)</p>
+              <p class="u-text u-text-6">සිතාරා සංජීවනී ගන් මිය.</p>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-3">
             <div class="u-container-layout u-similar-container u-container-layout-3">
               <div class="u-image u-image-circle u-image-3" data-image-width="1040" data-image-height="480"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-7">vice principal</h3>
-              <p class="u-text u-text-palette-3-base u-text-8">programming guru</p>
-              <p class="u-text u-text-9">Glavi amet ritnisl libero molestie ante ut fringilla purus eros quis glavrid from dolor amet iquam lorem bibendum</p>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-7">Vice Principal</h3>
+              <p class="u-text u-text-palette-3-base u-text-8">නියෝජ්‍ය විදුහල්පති <br>(අධ්‍යාපන සංවර්ධන) </p>
+              <p class="u-text u-text-9">එස්.පී. ‌‌‌ගොඩගම මිය.</p>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-4">
             <div class="u-container-layout u-similar-container u-container-layout-4">
               <div class="u-image u-image-circle u-image-4" data-image-width="1920" data-image-height="1920"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-10"> vice principal</h3>
-              <p class="u-text u-text-palette-3-base u-text-11">sales manager</p>
-              <p class="u-text u-text-12">Glavi amet ritnisl libero molestie ante ut fringilla purus eros quis glavrid from dolor amet iquam lorem bibendum</p>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-10"> Vice Principal</h3>
+              <p class="u-text u-text-palette-3-base u-text-11">සහකාර විදුහල්පති<br> (විෂය සමගාමී හා විෂය බාහිර කටයුතු හා උපදේශන කටයුතු) 
+                </p>
+              <p class="u-text u-text-12">එස්.එම්.එන්.අයි.කේ.සූරියකුල මයා.</p>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-5">
             <div class="u-container-layout u-similar-container u-container-layout-5">
               <div class="u-image u-image-circle u-image-5" data-image-width="1920" data-image-height="1920"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-13"> vice principal</h3>
-              <p class="u-text u-text-palette-3-base u-text-14">sales manager</p>
-              <p class="u-text u-text-15">Glavi amet ritnisl libero molestie ante ut fringilla purus eros quis glavrid from dolor amet iquam lorem bibendum</p>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-13"> Vice Principal</h3>
+              <p class="u-text u-text-palette-3-base u-text-14">නියෝජ්‍ය විදුහල්පති<br> (විෂයය සමගාමී හා විෂයය බාහිර) </p>
+              <p class="u-text u-text-15">ඉෂංකා සුරංගනී හෙට්ටිආරච්චි මිය.</p>
             </div>
           </div>
           <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-50 u-repeater-item u-shape-round u-white u-list-item-6">
             <div class="u-container-layout u-similar-container u-container-layout-6">
               <div class="u-image u-image-circle u-image-6" data-image-width="259" data-image-height="194"></div>
-              <h3 class="u-custom-font u-font-montserrat u-text u-text-16"> vice principal</h3>
-              <p class="u-text u-text-palette-3-base u-text-17">sales manager</p>
-              <p class="u-text u-text-18">Glavi amet ritnisl libero molestie ante ut fringilla purus eros quis glavrid from dolor amet iquam lorem bibendum</p>
+              <h3 class="u-custom-font u-font-montserrat u-text u-text-16"> Vice Principal</h3>
+              <p class="u-text u-text-palette-3-base u-text-17">සහකාර විදුහල්පති<br> (මූල්‍ය කටයුතු හා අධ්‍යාපන සංවර්ධන අධීක්ෂණය)  
+                </p>
+              <p class="u-text u-text-18">ජී.පී.එල්. හිරිපිටිය මිය.</p>
             </div>
           </div>
         </div>
