--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="icon" href="images/20220831_104506.png">
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="en-LK"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
